# event_recording

./: CMakeLists.txt  package.xml
config/: params.yaml
launch/: event_recorder.launch.xml
src/: event_recorder.cpp
